tests/ui/traits/tuple-diagnostic-issue-152903.stderr
error[E0277]: `Foo` doesn't implement `Debug`
  --> $DIR/tuple-diagnostic-issue-152903.rs:10:17
   |
LL |     testing((1, Foo));
   |     -------     ^^^ the trait `Debug` is not implemented for `Foo`
   |     |
   |     required by a bound introduced by this call
   |
   = note: add `#[derive(Debug)]` to `Foo` or manually `impl Debug for Foo`
   = help: the following other types implement trait `Debug`:
             ()
             tuples with 1 to 12 elements
   = note: required for `({integer}, Foo)` to implement `Debug`
note: required by a bound in `testing`
  --> $DIR/tuple-diagnostic-issue-152903.rs:5:15
   |
LL | fn testing<T: Debug>(_t: T) {}
   |               ^^^^^ required by this bound in `testing`
help: consider annotating `Foo` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | struct Foo;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
